Dependency upgrades and code cleanup (#21)
* Upgraded aerospike-client, jackson-annotations, log4j-slf4j-impl, connect-api dependencies
* Removed test related code from build.gradle.kts as we don't have any tests in the SDK